# paper-collector

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: collect.yml  scheduled-aluminosilicate.yml  scheduled-collect.yml  scheduled-halide.yml
collections/.sjr/: sjr_quartiles.json
collections/.state/: query_state.json  query_state_aluminosilicate.json  query_state_halide-solid-state-battery.json
collections/aluminosilicate/papers/arxiv_2301.07043v1/: metadata.json
collections/aluminosilicate/papers/arxiv_2301.07046v1/: metadata.json
collections/aluminosilicate/papers/arxiv_2306.15965v1/: metadata.json
collections/aluminosilicate/papers/arxiv_2407.01780v1/: metadata.json
collections/aluminosilicate/papers/arxiv_2601.16940v1/: metadata.json
collections/aluminosilicate/papers/doi_10.1002_adfm.75724/: metadata.json
collections/aluminosilicate/papers/doi_10.1002_advs.202400736/: metadata.json
collections/aluminosilicate/papers/doi_10.1007_s10717-022-00476-3/: metadata.json
collections/aluminosilicate/papers/doi_10.1007_s40145-021-0461-6/: metadata.json
collector/: __init__.py  deduplicator.py  engine.py
connectors/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  unpaywall.py
data/: __init__.py  sjr.py
models/: __init__.py  collection.py  config.py  paper.py  profile.py
tests/: conftest.py  test_paper_model.py  test_pdf_utils.py  test_storage.py
utils/: __init__.py  http.py  logging.py  pdf.py  state.py  storage.py
workflows/: __init__.py  collect.py  scheduled.py  view.py
(+195 files in other folders)
